<resources>
    <string name="app_name">PracticeApp</string>
    <string name="hello_world">Hello world!</string>
    <!-- Main Activity Stuff -->
    <string name="action_settings">Settings</string>
    <string name="default_loading_text">Loading...</string>
    <string name="title_activity_list">ListActivity</string>

    <string name="new_activity_button_text">Recycler Acitivty</string>
    <string name="fragment_button_text">Fragment Activity</string>
    <string name="button_increment">+</string>
    <string name="button_decrement">-</string>


    <!-- Fragment Acitivity Stuff -->
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- List Activity Stuff -->

    <!-- Generic Button Stuff -->
    <string name="default_button_text">Press Me</string>
</resources>
