<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="0"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/not_button"/>

    <Button
        android:layout_toRightOf="@id/not_button"
        android:layout_toEndOf="@id/not_button"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_increment"
        android:id="@+id/up_button" />

    <Button
        android:layout_toLeftOf="@id/not_button"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_decrement"
        android:id="@+id/down_button" />

    <Button
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_button_text"
        android:id="@+id/mystery_button"/>
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_below="@id/mystery_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/output_text"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity ="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_activity_button_text"
            android:id="@+id/new_activity_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_button_text"
            android:id="@+id/fragment_button"/>

    </LinearLayout>

</RelativeLayout>
